@@ -135,7 +135,7 @@
  *  ...
  */
 
-#define STM32_CAN_FR_OFFSET(f,i) (0x240+((f)<<3)*(((i)-1)<<2))
+#define STM32_CAN_FR_OFFSET(f,i) (0x240+((f)<<3)+(((i)-1)<<2))
 
 /* Register Addresses ***************************************************************/
 
